--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "betterScripts": {
     "build": {
-      "command": "webpack",
+      "command": "webpack-wizard",
       "env": {
         "NODE_ENV": "production"
       }
@@ -23,7 +23,7 @@
       "command": "eslint src/ --ext .js"
     },
     "start": {
-      "command": "node dev-server.js",
+      "command": "webpack-wizard-dev",
       "env": {
         "NODE_ENV": "development"
       }
@@ -50,39 +50,19 @@
     "classnames": "^2.2.5",
     "lodash.throttle": "^4.1.1",
     "mobx": "^3.3.1",
-    "mobx-react": "^4.3.3",
+    "mobx-react": "^4.3.4",
     "normalize.css": "^7.0.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.4",
-    "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
     "better-npm-run": "0.1.0",
-    "copy-webpack-plugin": "^4.1.0",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.8.0",
+    "eslint": "^4.10.0",
     "eslint-plugin-react": "^7.4.0",
-    "express": "^4.16.1",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.4",
-    "html-webpack-plugin": "^2.30.1",
     "http-server": "^0.10.0",
-    "node-sass": "^4.5.3",
-    "postcss-loader": "^2.0.6",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "sass-loader": "^6.0.6",
-    "style-ext-html-webpack-plugin": "^3.4.1",
-    "style-loader": "^0.18.2",
-    "webpack": "^3.6.0",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.19.1"
+    "react-hot-loader": "^3.1.1",
+    "webpack-wizard": "git://github.com/kamilmielnik/webpack-wizard.git"
   }
 }
