--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "normalize.css": "^7.0.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "sidebar": "git://github.com/kamilmielnik/sidebar.git"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.1",
