--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "betterScripts": {
     "build": {
-      "command": "webpack-wizard",
+      "command": "webpack-wizard build",
       "env": {
         "NODE_ENV": "production"
       }
@@ -23,7 +23,7 @@
       "command": "eslint src/ --ext .js"
     },
     "start": {
-      "command": "webpack-wizard-dev",
+      "command": "webpack-wizard start",
       "env": {
         "NODE_ENV": "development"
       }
@@ -64,6 +64,6 @@
     "eslint-plugin-react": "^7.4.0",
     "http-server": "^0.10.0",
     "react-hot-loader": "^3.1.1",
-    "webpack-wizard": "git://github.com/kamilmielnik/webpack-wizard.git"
+    "webpack-wizard": "0.0.15"
   }
 }
